force-app/main/default/objects/RTL_Household_Member__c/RTL_Household_Member__c.object-meta.xml
<CustomObject>
    <label>Household Membership</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Household Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>