force-app/main/default/objects/RTL_Household_Member__c/fields/Primary_Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Cust_ID__c</fullName>
    <formula>RTL_Household__r.Primary_Cust_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Cust ID</label>
    <type>Text</type>
</CustomField>