force-app/main/default/objects/RTL_Household_Member__c/fields/RTL_Benefit__c.field-meta.xml
<CustomField>
    <fullName>RTL_Benefit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Member is entitled to Household Benefit</description>
    <label>Benefit</label>
    <type>Checkbox</type>
</CustomField>