force-app/main/default/objects/RTL_Household_Member__c/fields/RTL_Household__c.field-meta.xml
<CustomField>
    <fullName>RTL_Household__c</fullName>
    <description>Household that this member record belongs to</description>
    <label>Household</label>
    <referenceTo>RTL_Household__c</referenceTo>
    <relationshipName>Household_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>