force-app/main/default/objects/RTL_Household_Member__c/fields/RTL_Household_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Household_Member_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of this Household Member</description>
    <label>Household Member Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Household_Members</relationshipName>
    <type>Lookup</type>
</CustomField>