force-app/main/default/objects/RTL_Household_Member__c/fields/RTL_Household_Status__c.field-meta.xml
<CustomField>
    <fullName>RTL_Household_Status__c</fullName>
    <formula>TEXT( RTL_Household__r.RTL_Status__c )</formula>
    <label>Household Status</label>
    <type>Text</type>
</CustomField>