force-app/main/default/objects/RTL_Household_Member__c/fields/RTL_Household_Text_Only__c.field-meta.xml
<CustomField>
    <fullName>RTL_Household_Text_Only__c</fullName>
    <formula>RTL_Household__r.Name</formula>
    <label>Household</label>
    <type>Text</type>
</CustomField>