force-app/main/default/objects/RTL_Household_Member__c/fields/RTL_Is_Approved__c.field-meta.xml
<CustomField>
    <fullName>RTL_Is_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approved</label>
    <type>Checkbox</type>
</CustomField>