force-app/main/default/objects/RTL_Household_Member__c/fields/RTL_Primary__c.field-meta.xml
<CustomField>
    <fullName>RTL_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this member is the Primary member of this Household</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>