force-app/main/default/objects/RTL_Household_Member__c/fields/RTL_Relationship__c.field-meta.xml
<CustomField>
    <fullName>RTL_Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>คู่สมรส</fullName>
            </value>
            <value>
                <fullName>บิดา/มารดา</fullName>
            </value>
            <value>
                <fullName>บุตร</fullName>
            </value>
            <value>
                <fullName>พี่น้อง</fullName>
            </value>
            <value>
                <fullName>ปู่/ย่า/ตา/ยาย</fullName>
            </value>
            <value>
                <fullName>หลาน</fullName>
            </value>
            <value>
                <fullName>ญาติ</fullName>
            </value>
            <value>
                <fullName>อื่นๆ</fullName>
            </value>
            <value>
                <fullName>Child of</fullName>
                <isActive>false</isActive>
                <label>Child of</label>
            </value>
            <value>
                <fullName>Grandchild of</fullName>
                <isActive>false</isActive>
                <label>Grandchild of</label>
            </value>
            <value>
                <fullName>Grandparent of</fullName>
                <isActive>false</isActive>
                <label>Grandparent of</label>
            </value>
            <value>
                <fullName>Others of</fullName>
                <isActive>false</isActive>
                <label>Others of</label>
            </value>
            <value>
                <fullName>Parent of</fullName>
                <isActive>false</isActive>
                <label>Parent of</label>
            </value>
            <value>
                <fullName>Relative of</fullName>
                <isActive>false</isActive>
                <label>Relative of</label>
            </value>
            <value>
                <fullName>Sibling of</fullName>
                <isActive>false</isActive>
                <label>Sibling of</label>
            </value>
            <value>
                <fullName>Spouse of</fullName>
                <isActive>false</isActive>
                <label>Spouse of</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>