force-app/main/default/objects/RTL_Household_Member__c/fields/RTL_RM_BM__c.field-meta.xml
<CustomField>
    <fullName>RTL_RM_BM__c</fullName>
    <formula>RTL_Household__r.RTL_RM__c</formula>
    <label>RM/BM</label>
    <type>Text</type>
</CustomField>