force-app/main/default/objects/RTL_Household_Member__c/fields/RTL_RM_BM_Link__c.field-meta.xml
<CustomField>
    <fullName>RTL_RM_BM_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;RTL_Household__r.RTL_RM__c, RTL_Household__r.RTL_RM_UserName__c )</formula>
    <label>RM/BM</label>
    <type>Text</type>
</CustomField>