force-app/main/default/objects/RTL_Household_Member__c/fields/RTL_TMB_Customer_ID_PE__c.field-meta.xml
<CustomField>
    <fullName>RTL_TMB_Customer_ID_PE__c</fullName>
    <description>TMB Customer ID for Integration purposes</description>
    <formula>RTL_Household_Member_Name__r.TMB_Customer_ID_PE__c</formula>
    <label>TMB Customer ID</label>
    <type>Text</type>
</CustomField>