force-app/main/default/objects/RTL_Household_Member__c/fields/RTL_To_Delete__c.field-meta.xml
<CustomField>
    <fullName>RTL_To_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Soft Delete</description>
    <label>Delete Member</label>
    <type>Checkbox</type>
</CustomField>