force-app/main/default/objects/RTL_Household_Member__c/validationRules/RTL_Benefit_Must_be_Checked.validationRule-meta.xml
<ValidationRule>
    <fullName>RTL_Benefit_Must_be_Checked</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RTL_Primary__c = True,  RTL_Benefit__c = False)</errorConditionFormula>
    <errorMessage>Benefits must also be checked for a Primary member</errorMessage>
</ValidationRule>