force-app/main/default/objects/RTL_Household_Member__c/validationRules/RTL_Cannot_Set_Delete.validationRule-meta.xml
<ValidationRule>
    <fullName>RTL_Cannot_Set_Delete</fullName>
    <active>true</active>
    <description>User cannot set Delete. Must set To Delete to remove a record for maker checker purposes.</description>
    <errorConditionFormula>ISPICKVAL( RTL_Status__c , &quot;Deleted&quot;)</errorConditionFormula>
    <errorMessage>Please use To Delete status to delete this member.</errorMessage>
</ValidationRule>