force-app/main/default/objects/RTL_Household_Member__c/validationRules/RTL_Non_Primary_Must_Have_Relationship.validationRule-meta.xml
<ValidationRule>
    <fullName>RTL_Non_Primary_Must_Have_Relationship</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!RTL_Primary__c,  ISPICKVAL(RTL_Relationship__c ,&quot;&quot;))</errorConditionFormula>
    <errorMessage>Non Primary Member must have a Relationship to Primary Member defined</errorMessage>
</ValidationRule>